# auto-resume

./: .env.sample  .gitignore  README.md  generate_resume.py  pyproject.toml  resume.example.json  run.py  seed.py
auto_resume/: app_v2.py  cli.py  engine_v1.py  engine_v2.py  engine_v3.py  resume.py  storage_client.py
auto_resume/app/: __init__.py  app.py  constants.py  db_utils.py
auto_resume/app/api/: company.py  job_ad.py  job_history.py  resume.py
auto_resume/app/components/: company_card.py  new_company_form.py
auto_resume/db/: client.py
auto_resume/db/models/: __init__.py  base.py  company.py  job_history.py  resume.py  resume_job_history.py  title.py  title_job_history.py
auto_resume/sdk/: color_print_mixin.py  create_resume.py  errors.py  evaluate_resume.py  logger.py  metrics.py  prompt_template.py  text_parser_mixin.py
auto_resume/sdk/agents/: base_agent.py
auto_resume/sdk/agents/experience_enhancing_agent/: agent.py  prompt_templates.py
auto_resume/sdk/agents/experience_tailoring_agent/: agent.py
auto_resume/sdk/agents/jd_parsing_agent/: agent.py  prompt_templates.py
auto_resume/sdk/agents/keyword_injecting_agent/: agent.py  prompt_templates.py
auto_resume/sdk/agents/responsibility_extracting_agent/: agent.py
auto_resume/sdk/embedding_models/: base_embedding_model.py  sentence_transformer_embedding_model.py
auto_resume/sdk/llms/: base_llm.py  openai_llm.py
auto_resume/sdk/resume_templates/: create_resume_v1.py  create_resume_v2.py  create_resume_v3.py
auto_resume/sdk/vector_stores/: annoy_vector_store.py  base_vector_store.py
(+2 files in other folders)
