[tool.poetry]
name = "auto-resume"
version = "0.1.0"
description = ""
authors = ["lokhiufung <lokhiufung123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.1"
rich = "^13.6.0"
python-docx = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
